--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>OpenLayers Draw/Modify Controls</title>
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/theme/default/style.css" type="text/css">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/openlayers/2.13.1/OpenLayers.js"></script>
+    <script src="http://mf-chmobil2.dev.bgdi.ch/~pierre/mfbase/openlayers/lib/OpenLayers.js"></script>
   </head>
   <body>
     <h1 id="title">OpenLayers Draw/Modify Controls</h1>
     <div id="map" class="smallmap" style="width:768px;height:512px;"></div>
+    <script src="VelolandTrack.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
